[project]
name = "slack-machine"
version = "0.40.1"
description = "A wonderful, simple, yet powerful and extendable Slack bot framework"
readme = "README.md"
authors = [
    { name = "Daan Debie", email = "daan@dv.email" },
]
license = { text = "MIT License" }
requires-python = ">=3.9,<4.0"
dependencies = [
    "dill>=0.3.5.1,<1.0.0.0",
    "APScheduler>=3.9.1,<4.0.0",
    "slack-sdk>=3.18.1,<4.0.0",
    "aiohttp>=3.8.5,<4.0.0",
    "pyee>=13.0.0,<13.1.0",
    "httpx>=0.28,<0.29",
    "tzdata>=2025.2,<2025.3",
    "pydantic>=2.2.1,<3.0.0",
    "structlog>=25.4,<25.5",
    "multidict>=6.0.5,<7.0.0",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Communications :: Chat",
    "Topic :: Internet",
    "Topic :: Office/Business",
]

[project.urls]
homepage = "https://github.com/DonDebonair/slack-machine"
repository = "https://github.com/DonDebonair/slack-machine"
documentation = "https://DonDebonair.github.io/slack-machine/"

[project.optional-dependencies]
redis = [
    "redis>=6.4.0,<6.5.0",
    "hiredis>=2,<4",
]
dynamodb = [
    "aioboto3>=15,<16",
]
sqlite = [
    "aiosqlite>=0.21,<0.22",
]

[project.scripts]
slack-machine = "machine.bin.run:main"

[dependency-groups]
dev = [
    "pytest>=7.1.3,<9.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "coverage>=6.5,<8.0",
    "redis>=6.4.0,<6.5.0",
    "pre-commit>=2.20,<5.0",
    "pyyaml>=6.0.1,<7.0.0",
    "pytest-cov>=7,<8",
    "typing-extensions>=4.4.0,<5.0.0",
    "pytest-asyncio>=1,<1.3",
    "mock>=4.0.3,<6.0.0",
    "mypy>=1.14,<2",
    "types-redis>=4.3.21,<5.0.0",
    "aioboto3>=15,<16",
    "types-aiobotocore[essential]>=2.4.0,<3.0.0",
    "aiosqlite>=0.21,<0.22",
    "ruff>=0.13.0,<0.14.0",
    "nox>=2024.10.9",
    "eval-type-backport>=0.2.2; python_version < '3.10'",
]
docs = [
    "mkdocstrings[python]>=0.30,<0.31",
    "mkdocs-material>=8.5.10,<10.0.0",
    "griffe>=1.7.3,<2.0.0",
    "mkdocstrings-python>=1.10.3,<2.0.0",
]
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/machine"]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
exclude = [
    ".git",
    ".eggs",
    "docs",
    "__pycache__",
    "dist",
    "build",
    "tests",
    "noxfile.py",
]
ignore = ["UP006", "UP007"]
select = [
    "E",
    "F",
    "W",
    # isort
    "I",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    #    # flake8-simplify
    "SIM",
]

[tool.ruff.lint.isort]
known-first-party = ["machine", "tests"]

[tool.ruff.format]
preview = true

[tool.pytest.ini_options]
mock_use_standalone_module = true
asyncio_default_fixture_loop_scope = "function"
addopts = "--verbose --cov-report term-missing --cov-report xml --junit-xml pytest.xml --cov=machine"

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
show_column_numbers = true
show_error_codes = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
warn_redundant_casts = true
